--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "axios": "^0.20.0",
         "bootstrap-vue": "^2.17.3",
+        "jquery": "^3.6.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.3",
         "vue-router": "^3.4.6",
