ignore npm encore built files

--- a/docker-compose-default.yaml
+++ b/docker-compose-default.yaml
@@ -39,8 +39,9 @@ services:
     networks:
       - table-operations-net
 
-    volumes:
-      - /home/anil/Documents/table-operations:/table-operations
+    #uncomment this when developing on host
+    #volumes:
+    #  - /home/anil/Documents/table-operations:/table-operations
 
 
   mariadb:
